--- a/.github/workflows/sync-version.yml
+++ b/.github/workflows/sync-version.yml
@@ -80,7 +80,7 @@ jobs:
           GIT_TOKEN: ${{ secrets.PAT }}
         run: |
           git clone --depth 1 \
-            "https://x-access-token:${GIT_TOKEN}@github.com/srkdev404-cyber/wysiwyg-editor-primary.git" \
+            "https://x-access-token:${GIT_TOKEN}@github.com/alpha2026a/wysiwyg-editor-P.git" \
             /tmp/wysiwyg-main
  
           rsync -av --delete /tmp/wysiwyg-main/js/ app/assets/javascripts/
@@ -91,8 +91,8 @@ jobs:
       # --------------------------------------------
       - name: Commit and push changes
         run: |
-          git config user.name "srkdev404-cyber"
-          git config user.email "srkdev404@gmail.com"
+          git config user.name "alpha2026a"
+          git config user.email "alphaalphaa2020@gmail.com"
  
           git add \
             lib/wysiwyg-rails/version.rb \
