--- a/.github/workflows/sync-version.yml
+++ b/.github/workflows/sync-version.yml
@@ -14,39 +14,31 @@ jobs:
  
     steps:
       # --------------------------------------------
-      # Checkout Rails repository (full history)
+      # Checkout repository
       # --------------------------------------------
-      - name: Checkout Rails repository
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.PAT }}
           fetch-depth: 0
  
       # --------------------------------------------
-      # Load version & release notes from payload
+      # Load & validate version
       # --------------------------------------------
-      - name: Load payload
+      - name: Load & validate version
         run: |
           VERSION="${{ github.event.client_payload.version }}"
           VERSION="${VERSION//,/\.}"
  
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
-          echo "${{ github.event.client_payload.release_notes }}" > release_notes.txt
- 
-          echo "Incoming version: $VERSION"
- 
-      # --------------------------------------------
-      # Validate SemVer (fail fast)
-      # --------------------------------------------
-      - name: Validate version format
-        run: |
-          if ! [[ "$VERSION" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-            echo "Invalid version format: $VERSION"
+          if ! [[ "$VERSION" =~ ^[0-9]+\.[0-9]+\.[0-9]+(-[0-9A-Za-z.-]+)?$ ]]; then
+            echo "Invalid version: $VERSION"
             exit 1
           fi
  
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+ 
       # --------------------------------------------
-      # Prepare release branch (safe & idempotent)
+      # Prepare release branch
       # --------------------------------------------
       - name: Prepare release branch
         run: |
@@ -56,11 +48,9 @@ jobs:
           git fetch origin
  
           if git ls-remote --heads origin "$BRANCH" | grep -q "$BRANCH"; then
-            echo "Release branch already exists. Reusing it."
             git checkout "$BRANCH"
             git pull origin "$BRANCH"
           else
-            echo "Creating new release branch $BRANCH"
             git checkout -b "$BRANCH"
           fi
  
@@ -69,52 +59,53 @@ jobs:
       # --------------------------------------------
       - name: Update version.rb
         run: |
-          sed -i -E "s/[0-9]+[.,][0-9]+[.,][0-9]+/$VERSION/" \
+          sed -i -E \
+            "s/VERSION\s*=\s*['\"][^'\"]+['\"]/VERSION = '${VERSION}'/" \
             lib/wysiwyg-rails/version.rb
  
       # --------------------------------------------
-      # Sync JS/CSS from primary repo (FIXED)
+      # Sync assets from primary repo
       # --------------------------------------------
-      - name: Sync JS/CSS from primary repo
+      - name: Sync assets
         env:
           GIT_TOKEN: ${{ secrets.PAT }}
         run: |
           git clone --depth 1 \
-            "https://x-access-token:${GIT_TOKEN}@github.com/alpha2026a/wysiwyg-editor-P.git" \
+            "https://x-access-token:${GIT_TOKEN}@github.com/srkdev404-cyber/wysiwyg-editor.git" \
             /tmp/wysiwyg-main
  
           rsync -av --delete /tmp/wysiwyg-main/js/ app/assets/javascripts/
           rsync -av --delete /tmp/wysiwyg-main/css/ app/assets/stylesheets/
  
       # --------------------------------------------
-      # Commit & push changes (safe on reruns)
+      # Commit & push
       # --------------------------------------------
-      - name: Commit and push changes
+      - name: Commit & push
         run: |
-          git config user.name "alpha2026a"
-          git config user.email "alphaalphaa2020@gmail.com"
+          git config user.name "srkdev404-cyber"
+          git config user.email "srkdev404@gmail.com"
  
           git add \
             lib/wysiwyg-rails/version.rb \
             app/assets/javascripts \
-            app/assets/stylesheets \
-            release_notes.txt
+            app/assets/stylesheets
  
-          git commit -m "chore: release v${VERSION} (sync version, assets, and release notes)" \
-            || echo "Nothing to commit"
- 
+          git commit -m "chore: release v${VERSION}" || echo "Nothing to commit"
           git push origin "$BRANCH"
  
       # --------------------------------------------
-      # Create Pull Request (idempotent)
+      # Create Pull Request (YAML-SAFE)
       # --------------------------------------------
       - name: Create Pull Request
         env:
           GH_TOKEN: ${{ secrets.PAT }}
+          RELEASE_NOTES: ${{ github.event.client_payload.release_notes }}
         run: |
+          PR_BODY=$(printf "release: yes\n\n## Release Notes (from primary repo)\n\n%s\n" "$RELEASE_NOTES")
+ 
           gh pr create \
             --base master \
             --head "$BRANCH" \
             --title "Release v${VERSION}" \
-            --body "release: yes" \
+            --body "$PR_BODY" \
             || echo "Pull request already exists"
